# 6-dof-composition

./: CMakeLists.txt  COMPOSITION.m  LoopClosingTestMain.m  README.md  absLoopClosing.m  calcCov.m  calcSym.m  calculate3DPoint.m  calculateHandhk.m  calculateHhk.m  clearMATLAB.m  comp.m  comp2D.m  compMain.m  compMainQuat.m  compMainUQ.m  compQuat.m  compUQ.m  composition.m  cv_test.m  drawAngle.m  ekfMain.m  euclidDistance.m  eulerToQuat.m  findCorrespondencies.m  findCorrespondenciesIndex.m  findCorrespondenciesIndexUpdate.m  findCorrespondenciesSURF.m  findFeature.m  findLoopClosing.m  getCov.m  getImageByTimestamp.m  imageLoader.m  innovation.m  invers.m  inversQuat.m  inversUQ.m  inversion.m  matlab.mat  objectPose3D2D.m  (+31 more)
bag/: gt.txt  gt_adapted.txt  viso.txt  viso2.txt  viso2_online_optima3.txt  viso2_online_optima3_edit.txt  viso_edit.txt
bag/ROS/: loop_closures.txt~
bag/matlab snapshot/: matlab.mat
doc/: Makefile  doc.tex
other/: Jactest.m  absLoopClosing.m  noiseTest.m  testK.m  testq.m  testq2.m  visionTest2.m
plot/: plotCell3D.m  plotEKF.m  plotGroundTr.m  plotStateNew.m
quaternion/: quatMult.m
src/: CMakeLists.txt  ekfslam.cpp  rosBagFileReader.cpp
src/util/: CMakeLists.txt  CMakeLists.txt~
util/: addNoiseToState.m  calcCov.m  calculateError.m  calculateHhk.m  cv_test.m  eulerToQuat.m  getCov.m  innovation.m  plotEllipsoid.m  plot_dir3.m  quatInvers.m  quatMult.m  quatToMatrix.m  relativeMotionFromAbsoluteMotionUQ.m  rosBagFileReader.m  trajectoryError.m  videoWrite.m
vision/: findCorrespondenciesIndex.m
